# llm-dungeon-crawler

./: .gitignore  .pre-commit-config.yaml  CLOUD_SETUP.md  DEVELOPMENT.md  GEMINI.md  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
alternativecontent/: ALTERNATIVECONTENT.md
alternativecontent/bathroomapocalypse/game/data/: enemies.md  items.md  npcs.md  rooms.md
alternativecontent/bathroomapocalypse/game/data/prompts/: __init__.py  combat.md  intro.md  item_use.md  npc.md  room.md
content/scifi/: enemies.md  rooms.md
content/scifi/prompts/: intro.md  npc.md  rest.md  room.md
data/: enemies.md  npcs.md
docker/: Dockerfile  Dockerfile.claude
game/: ai.py  cli.py  content.py  engine.py  gemini.py  logger.py  map.py  mechanics.py  models.py  theme.py  utils.py
game/data/: __init__.py  bosses.md  items.md  rooms.md
game/data/prompts/: combat.md  final_room.md  intro.md  item_use.md  npc.md  room.md
scripts/: agentic-sandbox.py  agentic-sandbox.sh  claude-sandbox.py  claude-sandbox.sh  gemini-sandbox.py  gemini-sandbox.sh
tests/: conftest.py  test_ai.py  test_cli.py  test_content.py  test_engine.py  test_engine_commands.py  test_grid_consistency.py  test_llama_server.py  test_logger.py  test_map.py  test_mechanics.py  test_models.py  test_ollama_lifecycle.py  test_robustness.py  test_theme.py
themes/dark-fantasy/: enemies.md  items.md  npcs.md  rooms.md
themes/dark-fantasy/prompts/: intro.md  item_use.md  rest.md  room.md
themes/scifi/: items.md  npcs.md
themes/scifi/prompts/: combat.md  item_use.md
