[project]
name = "llm-dungeon-crawler"
version = "0.1.0"
description = "A text-based dungeon crawler powered by a llama-server hosted LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "numpy>=2.4.4",
]

[project.scripts]
dungeon-crawler = "game.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.57.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",      # Bugbear
    "D",      # Docstrings
    "E",      # Pycodestyle
    "F",      # Pyflakes
    "I",      # Isort
    "W",      # Pycodestyle
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
]
fixable = ["ALL"]
unfixable = []

[tool.pyrefly]
[tool.pyrefly.errors]
unannotated-parameter = "error"
unannotated-return = "error"
implicit-any = "error"
